--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uniswap/interface",
   "version": "1.1.0",
-  "description": "ETCswap Interface",
+  "description": "emuswap Interface",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "ajv": "node scripts/compile-ajv-validators.js",
@@ -166,12 +166,12 @@
     "yarn-deduplicate": "^6.0.0"
   },
   "resolutions": {
-    "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap",
-    "@uniswap/smart-order-router": "git+https://github.com/etcswap/smart-order-router.git#etcswap",
-    "@uniswap/universal-router-sdk": "git+https://github.com/etcswap/universal-router-sdk.git#etcswap",
-    "@uniswap/v3-periphery": "git+https://github.com/etcswap/v3-periphery.git#etcswap",
-    "@uniswap/v3-sdk": "git+https://github.com/etcswap/v3-sdk.git#etcswap",
-    "@uniswap/v2-sdk": "git+https://github.com/etcswap/v2-sdk.git#etcswap"
+    "@uniswap/sdk-core": "git+https://github.com/emuswap/sdk-core.git#emuswap",
+    "@uniswap/smart-order-router": "git+https://github.com/emuswap/smart-order-router.git#emuswap",
+    "@uniswap/universal-router-sdk": "git+https://github.com/emuswap/universal-router-sdk.git#emuswap",
+    "@uniswap/v3-periphery": "git+https://github.com/emuswap/v3-periphery.git#emuswap",
+    "@uniswap/v3-sdk": "git+https://github.com/emuswap/v3-sdk.git#emuswap",
+    "@uniswap/v2-sdk": "git+https://github.com/emuswap/v2-sdk.git#emuswap"
 
   },
   "dependencies": {
@@ -209,17 +209,17 @@
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/redux-multicall": "^1.1.8",
     "@uniswap/router-sdk": "^1.6.0",
-    "@uniswap/sdk-core": "git+https://github.com/etcswap/sdk-core.git#etcswap",
-    "@uniswap/smart-order-router": "git+https://github.com/etcswap/smart-order-router.git#etcswap",
+    "@uniswap/sdk-core": "git+https://github.com/emuswap/sdk-core.git#emuswap",
+    "@uniswap/smart-order-router": "git+https://github.com/emuswap/smart-order-router.git#emuswap",
     "@uniswap/token-lists": "^1.0.0-beta.33",
     "@uniswap/uniswapx-sdk": "^1.4.1",
-    "@uniswap/universal-router-sdk": "git+https://github.com/etcswap/universal-router-sdk.git#etcswap",
+    "@uniswap/universal-router-sdk": "git+https://github.com/emuswap/universal-router-sdk.git#emuswap",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@uniswap/v2-sdk": "git+https://github.com/etcswap/v2-sdk.git#etcswap",
+    "@uniswap/v2-sdk": "git+https://github.com/emuswap/v2-sdk.git#emuswap",
     "@uniswap/v3-core": "^1.0.1",
-    "@uniswap/v3-periphery": "git+https://github.com/etcswap/v3-periphery.git#etcswap",
-    "@uniswap/v3-sdk": "git+https://github.com/etcswap/v3-sdk.git#etcswap",
+    "@uniswap/v3-periphery": "git+https://github.com/emuswap/v3-periphery.git#emuswap",
+    "@uniswap/v3-sdk": "git+https://github.com/emuswap/v3-sdk.git#emuswap",
     "@vanilla-extract/css": "^1.12.0",
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/dynamic": "^2.0.3",
